fix drag long basket list module layout broken

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -268,6 +268,10 @@ a {
     }
 }
 
+#basket-scroll {
+    padding-bottom: 20px;
+}
+
 /* sidebar */
 #sidebar {
     background: @grey;
